Correção de width e height das tags img

--- a/index.html
+++ b/index.html
@@ -84,13 +84,10 @@
   </div>
 
   <main class="intro-bg">
-    <!-- <div class="intro">
-      <img src="./src/img/dec/monograma.svg" alt="Emanuele & Lucas" width="400" height="292">
-    </div> -->
     <div class="intro-left">
     </div>
     <div class="intro-right">
-      <img src="./src/img/dec/monograma.svg">
+      <img src="./src/img/dec/monograma.svg" width="401" height="293">
     </div>
   </main>
 
@@ -127,37 +124,16 @@
   </article>
 
   <article class="galeria">
-    <img src="./src/img/pictures/1.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/2.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/3.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/4.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/5.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/6.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/7.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/8.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/9.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/1.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/2.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/3.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/4.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/5.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/6.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/7.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/8.jpg" alt="" width="3200" height="3200">
+    <img src="./src/img/pictures/9.jpg" alt="" width="3200" height="3200">
   </article>
-
-  <!-- <article class="container-bg" id="orientacoes">
-    <div class="container orientacoes">
-      <div class="flower-2-left">
-        <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
-      </div>
-      <h2 class="font-1-xl p5">Orientações</h2>
-      <div class="orientacoes-img">
-        <img src="./src/img/pictures/casarao.jpg" alt="Villa Casarão" width="600" height="400">
-      </div>
-      <div class="orientacoes-text">
-        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-l c11">Villa Casarão</a>
-        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Rod. Baldicero Filomeno, 11789</a>
-        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Ribeirão da Ilha</a>
-        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Florianópolis - SC</a>
-      </div>
-      <div class="flower-2-right">  
-        <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
-      </div>
-    </div>
-  </article> -->
 
   <footer class="footer-bg">
     <div class="footer">
