--- a/presentes.html
+++ b/presentes.html
@@ -91,7 +91,7 @@
   <main class="presentes-bg">
     <div class="presentes">
       <div class="container-presente">
-        <img src="./src/img/presentes/nada-min.jpg">
+        <img src="./src/img/presentes/nada-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Pra não dizer que não dei nada</span>
           <span class="font-2-m c9 preco">R$50,00</span>
@@ -100,7 +100,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/lencinhos-min.jpg">
+        <img src="./src/img/presentes/lencinhos-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Lencinhos para a cerimônia</span>
           <span class="font-2-m c9 preco">R$100,00</span>
@@ -109,7 +109,7 @@
       </div>
   
       <div class="container-presente">
-        <img src="./src/img/presentes/racao-min.jpg">
+        <img src="./src/img/presentes/racao-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Ração gourmet para a Pandora</span>
           <span class="font-2-m c9 preco">R$150,00</span>
@@ -118,7 +118,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/coquetel-min.jpg">
+        <img src="./src/img/presentes/coquetel-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Coquetel à beira da piscina na lua de mel</span>
           <span class="font-2-m c9 preco">R$175,00</span>
@@ -127,7 +127,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/velas-min.jpg">
+        <img src="./src/img/presentes/velas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Velas para "manter a chama acesa"</span>
           <span class="font-2-m c9 preco">R$200,00</span>
@@ -136,7 +136,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/filme-min.jpg">
+        <img src="./src/img/presentes/filme-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Evite a discussão do casal pra escolher filme</span>
           <span class="font-2-m c9 preco">R$225,00</span>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/toalha-min.jpg">
+        <img src="./src/img/presentes/toalha-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Evite a briga pela toalha molhada na cama</span>
           <span class="font-2-m c9 preco">R$250,00</span>
@@ -154,7 +154,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/roupas-min.jpg">
+        <img src="./src/img/presentes/roupas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Jogar fora as roupas de ficar em casa</span>
           <span class="font-2-m c9 preco">R$275,00</span>
@@ -163,7 +163,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/tpm-min.jpg">
+        <img src="./src/img/presentes/tpm-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Fundo emergencial da TPM</span>
           <span class="font-2-m c9 preco">R$300,00</span>
@@ -172,7 +172,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/coberta-min.jpg">
+        <img src="./src/img/presentes/coberta-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Curso de como dividir a coberta sem guerra</span>
           <span class="font-2-m c9 preco">R$320,00</span>
@@ -181,7 +181,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/terapia-manu-min.jpg">
+        <img src="./src/img/presentes/terapia-manu-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Terapia pra Manu aguentar o Lucas</span>
           <span class="font-2-m c9 preco">R$325,00</span>
@@ -190,7 +190,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/terapia-lucas-min.jpg">
+        <img src="./src/img/presentes/terapia-lucas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Terapia pro Lucas aguentar a Manu na semana do casamento</span>
           <span class="font-2-m c9 preco">R$349,00</span>
@@ -199,7 +199,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/aulas-min.jpg">
+        <img src="./src/img/presentes/aulas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Aulas de paciência pro Lucas esperar a Manu se arrumar</span>
           <span class="font-2-m c9 preco">R$350,00</span>
@@ -208,7 +208,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/vinho-min.jpg">
+        <img src="./src/img/presentes/vinho-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Vinho chique pra lua de mel</span>
           <span class="font-2-m c9 preco">R$375,00</span>
@@ -217,7 +217,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/panela-min.jpg">
+        <img src="./src/img/presentes/panela-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Panela que não gruda</span>
           <span class="font-2-m c9 preco">R$400,00</span>
@@ -226,7 +226,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/pipoca-min.jpg">
+        <img src="./src/img/presentes/pipoca-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Assinatura de pipoca para as noites de filme</span>
           <span class="font-2-m c9 preco">R$415,00</span>
@@ -235,7 +235,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/caminha-min.jpg">
+        <img src="./src/img/presentes/caminha-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Caminha pra Pandora (melhor que a nossa)</span>
           <span class="font-2-m c9 preco">R$425,00</span>
@@ -244,7 +244,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/jantar-min.jpg">
+        <img src="./src/img/presentes/jantar-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Aparelho de jantar "para as visitas"</span>
           <span class="font-2-m c9 preco">R$450,00</span>
@@ -253,7 +253,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/lanchinhos-min.jpg">
+        <img src="./src/img/presentes/lanchinhos-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Lanchinhos da madrugada no casamento</span>
           <span class="font-2-m c9 preco">R$475,00</span>
@@ -262,7 +262,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/mergulho-min.jpg">
+        <img src="./src/img/presentes/mergulho-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Aulas de mergulho na lua de mel</span>
           <span class="font-2-m c9 preco">R$500,00</span>
@@ -271,7 +271,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/danca-min.jpg">
+        <img src="./src/img/presentes/danca-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Aulas de dança pra não passar vergonha na festa</span>
           <span class="font-2-m c9 preco">R$525,00</span>
@@ -280,7 +280,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/despedida-min.jpg">
+        <img src="./src/img/presentes/despedida-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Ajude na despedida de solteiro</span>
           <span class="font-2-m c9 preco">R$575,00</span>
@@ -289,7 +289,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/buque-min.jpg">
+        <img src="./src/img/presentes/buque-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Jogar o buquê na sua direção</span>
           <span class="font-2-m c9 preco">R$600,00</span>
@@ -298,7 +298,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/vaso-min.jpg">
+        <img src="./src/img/presentes/vaso-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Assento de vaso com fechamento automático pro noivo</span>
           <span class="font-2-m c9 preco">R$625,00</span>
@@ -307,7 +307,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/mundial-min.jpg">
+        <img src="./src/img/presentes/mundial-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Pra zoar o noivo que o Palmeiras não tem mundial</span>
           <span class="font-2-m c9 preco">R$700,00</span>
@@ -316,7 +316,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/festa-min.jpg">
+        <img src="./src/img/presentes/festa-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Aumente a duração da festa de casamento</span>
           <span class="font-2-m c9 preco">R$750,00</span>
@@ -325,7 +325,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/fotos-cafonas-min.jpg">
+        <img src="./src/img/presentes/fotos-cafonas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Viagem romântica com fotos cafonas</span>
           <span class="font-2-m c9 preco">R$800,00</span>
@@ -334,7 +334,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/bugigangas-min.jpg">
+        <img src="./src/img/presentes/bugigangas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Pra noiva comprar bugigangas na lua de mel</span>
           <span class="font-2-m c9 preco">R$850,00</span>
@@ -343,7 +343,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/netflix-min.jpg">
+        <img src="./src/img/presentes/netflix-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Assinatura anual da Netflix</span>
           <span class="font-2-m c9 preco">R$900,00</span>
@@ -352,7 +352,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/hotel-min.jpg">
+        <img src="./src/img/presentes/hotel-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Hotel pra Pandora na lua de mel</span>
           <span class="font-2-m c9 preco">R$950,00</span>
@@ -361,7 +361,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/delivery-min.jpg">
+        <img src="./src/img/presentes/delivery-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Assinatura vitalícia de delivery</span>
           <span class="font-2-m c9 preco">R$1.000,00</span>
@@ -370,7 +370,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/loucas-min.jpg">
+        <img src="./src/img/presentes/loucas-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Máquina de lavar louças para evitar discussões do casal</span>
           <span class="font-2-m c9 preco">R$1.200,00</span>
@@ -379,7 +379,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/filhos-min.jpg">
+        <img src="./src/img/presentes/filhos-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Pra poder perguntar quando vamos ter filhos</span>
           <span class="font-2-m c9 preco">R$1.300,00</span>
@@ -388,7 +388,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/fuga-min.jpg">
+        <img src="./src/img/presentes/fuga-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Plano de fuga em caso de DR intensa</span>
           <span class="font-2-m c9 preco">R$1.500,00</span>
@@ -397,7 +397,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/rooftop-min.jpg">
+        <img src="./src/img/presentes/rooftop-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Jantar em um rooftop na Colômbia</span>
           <span class="font-2-m c9 preco">R$2.000,00</span>
@@ -406,7 +406,7 @@
       </div>
 
       <div class="container-presente">
-        <img src="./src/img/presentes/aposentadoria-min.jpg">
+        <img src="./src/img/presentes/aposentadoria-min.jpg" width="752" height="752">
         <div class="desc-preco">
           <span class="font-2-m p5 desc">Fundo de aposentadoria para os noivos</span>
           <span class="font-2-m c9 preco">R$2.500,00</span>
