Atualização de credenciais

--- a/public/presentes.html
+++ b/public/presentes.html
@@ -83,10 +83,16 @@
     </div>
   </div>
 
-
   <div class="title">
     <h2 class="font-1-l p5">Lista de presentes</h2>
   </div>
+
+  <article class="container-bg-aviso">
+    <div class="container-aviso">
+      <p class="font-2-m c11">Prezados convidados,</p>
+      <p class="font-2-m c11">A sua presença é o nosso maior presente! Mas, se desejarem nos presentear de outra forma, preparamos com carinho algumas opções especiais.</p>
+    </div>
+  </article>
 
   <main class="presentes-bg">
     <div class="presentes">
